--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div>
-  Hello World
+<header>
+  User Management
+</header>
+<div class="app-container">
+  <router-outlet></router-outlet>
 </div>
