styling for dashboard

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,10 @@
 body {
   font-family: Roboto, sans-serif;
 }
+
+button.primary-button {
+  height: 56px;
+  width: fit-content;
+  padding: 0 35px;
+  align-self: end;
+}
