--- a/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/src/app/components/user-dashboard/user-dashboard.component.html
@@ -38,7 +38,7 @@
     }
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="goToUserDetails(row)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" tabindex="0" (keydown.enter)="goToUserDetails(row)" (click)="goToUserDetails(row)"></tr>
   </table>
   <div class="not-found" *ngIf="!(filteredUsers$ | async)?.length">
     No user matches the search criteria
