refactor user dashboard to handle filtering with store

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,8 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-button.primary-button {
+button.base-button {
   height: 56px;
   width: fit-content;
   padding: 0 35px;
-  align-self: end;
 }
