--- a/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/src/app/components/user-dashboard/user-dashboard.component.html
@@ -2,11 +2,11 @@
 
 <form class="filter-form" [formGroup]="form">
   <mat-form-field appearance="outline">
-    <mat-label>Name</mat-label>
+    <mat-label>Filter by Name</mat-label>
     <input matInput formControlName="name">
   </mat-form-field>
   <mat-form-field appearance="outline">
-    <mat-label>Role</mat-label>
+    <mat-label>Filter by Role</mat-label>
     <mat-select formControlName="role" name="role">
       <mat-option>None</mat-option>
       @for (role of roles; track role) {
@@ -15,7 +15,7 @@
     </mat-select>
   </mat-form-field>
   <mat-form-field appearance="outline">
-    <mat-label>Status</mat-label>
+    <mat-label>Filter by Status</mat-label>
     <mat-select formControlName="status" name="status">
       <mat-option>None</mat-option>
       @for (status of statuses; track status) {
