--- a/src/app/components/user-dashboard/user-dashboard.component.scss
+++ b/src/app/components/user-dashboard/user-dashboard.component.scss
@@ -5,13 +5,30 @@
 }
 
 h1 {
-  padding: 0 0 30px 0;
+  margin: 0 0 15px 0;
 }
 
 .filter-form {
   display: flex;
   column-gap: 10px;
   height: 56px;
+}
+
+.table-container {
+  max-height: 530px;
+  overflow: scroll;
+  box-shadow: 0px 0px 7px lightgray;
+  margin-top: 15px;
+  border-radius: 4px;
+}
+
+.not-found {
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 ::ng-deep {
@@ -38,21 +55,4 @@ h1 {
     width: 30px;
     left: 10px;
   }
-}
-
-.table-container {
-  max-height: 530px;
-  overflow: scroll;
-  box-shadow: 0px 0px 7px lightgray;
-  margin-top: 30px;
-  border-radius: 4px;
-}
-
-.not-found {
-  height: 52px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  color: rgba(0, 0, 0, 0.6);
 }
