--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 header {
   height: 60px;
-  background-color: #1a237e;
+  background-color: var(--dark-accent-color);
   box-shadow: 0px 1px 2px lightgray;
   font-size: 24px;
   display: flex;
