--- a/src/app/features/user-dashboard/user-dashboard.component.scss
+++ b/src/app/features/user-dashboard/user-dashboard.component.scss
@@ -28,13 +28,13 @@ h1 {
   align-items: center;
   justify-content: center;
   background-color: white;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--text-light-color);
 }
 
 ::ng-deep {
   .mat-mdc-table  th.mat-mdc-header-cell {
     background-color: white;
-    color: #3f51b5;
+    color: var(--accent-color);
     font-weight: 600;
     font-size: 16px;
   }
