--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,9 @@
+:root {
+  --accent-color: #3f51b5;
+  --dark-accent-color: #1a237e;
+  --text-light-color: #5e5e5e;
+}
+
 body {
   font-family: Roboto, sans-serif;
 }
